[project]
name = "dicoit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pyjokes==0.6.0",
    "pyttsx3==2.90",
    "pywhatkit==5.1",
    "speechrecognition==3.10.0",
    "wikipedia==1.4.0",
]
